--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Enter The Matrix</title>
   <link rel="stylesheet" href="test.css">
+  <link rel="shortcut icon" type="image/png" href="matrix.ico"/>
 </head>
 <body>
   <div class="matrix">
