--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Enter The Matrix</title>
   <link rel="stylesheet" href="test.css">
-  <link rel="shortcut icon" type="image/png" href="matrix.ico"/>
+  <link rel="shortcut icon" type="image/png" href="matrix.png"/>
 </head>
 <body>
   <div class="matrix">
