--- a/about.html
+++ b/about.html
@@ -11,9 +11,6 @@
   <li><a href="about.html">About</a></li>
 </ul>
   <div class="matrix">
-    <p>Wake up Neo...</p>
-    <p>The Matrix has you...</p>
-    <p>Follow the white rabbit.</p>
-    <p>Knock, knock, Neo.<span class="cursor">|</span></p>
+    <p>Coded by rehayilmazlar for fun to learn css.<span class="cursor">|</span></p>
   </div>
 </html>
