--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <div class="matrix">
         <a class="first" href="index.html">Home</a>
-        <a class="second" href="about.html">About</a><br>
+        <a class="second" href="about.html">About</a><br><br>
         <p>Coded by rehayilmazlar for fun to learn css.<span class="cursor">|</span></p>
     </div>
 
