--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Enter The Matrix</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="matrix.png" />
+    <link rel="shortcut icon" type="image/png" href="matrix.png">
 </head>
 
 <body class="responsive">
